--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -11,118 +11,118 @@
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="384dp"
+        android:layout_height="800dp"
         android:orientation="vertical"
-        >
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="412dp"
-            android:layout_height="match_parent"
-            android:contentDescription="donona_logo"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
             android:layout_marginTop="30dp"
+            android:contentDescription="donona_logo"
             android:gravity="center"
             app:srcCompat="@drawable/logo_text"
             tools:layout_editor_absoluteX="27dp"
             tools:layout_editor_absoluteY="29dp" />
-
 
         <ImageButton
             android:id="@+id/imageButton"
             android:layout_width="125dp"
             android:layout_height="125dp"
             android:layout_gravity="center"
-            android:scaleType="centerCrop"
+            android:layout_margin="24dp"
             android:background="@drawable/rounded_button"
-            android:layout_margin="10dp"/>
+            android:scaleType="centerCrop" />
 
         <!--        User profile here-->
         <GridLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:rowCount="2"
+            android:layout_height="140dp"
+            android:layout_marginTop="10dp"
             android:columnCount="2"
-            >
+            android:rowCount="2">
+
             <com.google.android.material.textview.MaterialTextView
-                android:text="Username"
-                android:layout_marginRight="5dp"
-                android:layout_marginLeft="5dp"
                 android:layout_row="0"
                 android:layout_column="0"
                 android:layout_columnWeight="0.05"
-                />
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:text="@string/username_label" />
+
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                 android:layout_width="0dip"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="5dp"
-                android:layout_marginLeft="5dp"
-                android:hint="User name here"
-                android:layout_column="1"
                 android:layout_row="0"
-                android:layout_columnWeight="0.9"
-                >
+                android:layout_column="1"
+                android:layout_columnWeight="1"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/username_profile"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_width="274dp"
+                    android:layout_height="48dp"
+                    android:background="@drawable/button" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textview.MaterialTextView
-                android:text="Email"
-                android:layout_marginRight="5dp"
-                android:layout_marginLeft="5dp"
                 android:layout_row="1"
                 android:layout_column="0"
                 android:layout_columnWeight="0.05"
-                />
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginTop="18dp"
+                android:text="@string/email" />
+
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                 android:layout_width="0dip"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="5dp"
-                android:layout_marginLeft="5dp"
-                android:hint="Email here"
-                android:layout_column="1"
                 android:layout_row="1"
-                android:layout_columnWeight="0.9"
-                >
+                android:layout_column="1"
+                android:layout_columnWeight="1"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginRight="5dp">
 
-                <TextView
+                <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/email_profile"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    />
+                    android:layout_width="274dp"
+                    android:layout_height="48dp"
+                    android:background="@drawable/button"
+                    android:focusable="false"/>
 
             </com.google.android.material.textfield.TextInputLayout>
         </GridLayout>
         <!--        <Button-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_gravity="center"-->
-<!--            android:text="@string/edit_avatar"-->
-<!--            />-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_gravity="center"-->
+        <!--            android:text="@string/edit_avatar"-->
+        <!--            />-->
 
         <Button
             android:id="@+id/update_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Update"
-            android:layout_margin="10dp"
             android:layout_gravity="center"
+            android:layout_margin="38dp"
+            android:text="Update" />
 
-            />
         <ImageView
-            android:layout_width="match_parent"
+            android:id="@+id/logo"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            app:srcCompat="@drawable/logo"
-            />
+            app:srcCompat="@drawable/logo" />
 
     </LinearLayout>
 
@@ -136,5 +136,4 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:menu="@menu/bottom_nav_menu" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
