--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -287,99 +287,16 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/TrendingCard"
-        android:layout_width="370dp"
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/trendingRecyclerView"
+        android:layout_width="500dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_margin="60dp"
-        app:cardCornerRadius="16dp"
-        app:cardElevation="5dp"
+        app:layout_constraintTop_toBottomOf="@+id/menu"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/menu">
-
-
-        <!-- Gộp LinearLayout vào bên trong CardView -->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="10dp">
-
-            <!-- Image on the left -->
-            <ImageView
-                android:id="@+id/trending_image"
-                android:layout_width="30dp"
-                android:layout_height="117dp"
-                android:layout_weight="1"
-                android:scaleType="centerCrop"
-                android:src="@drawable/supershin" /> <!-- Placeholder image -->
-
-            <!-- Textual information on the right -->
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:orientation="vertical"
-                android:paddingStart="8dp">
-
-                <!-- Title -->
-                <TextView
-                    android:id="@+id/title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/quite_brown"
-                    android:textSize="16sp"
-                    android:textStyle="bold" />
-
-                <!-- Location -->
-                <TextView
-                    android:id="@+id/location"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:textColor="@color/quite_brown" />
-
-                <!-- Hashtags -->
-                <TextView
-                    android:id="@+id/hashtags"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:textColor="@color/quite_brown" />
-
-                <!-- Operating hours -->
-                <TextView
-                    android:id="@+id/hours"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:textColor="@color/quite_brown" />
-
-                <!-- Distance and Rating -->
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:gravity="center_horizontal"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/distance"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@android:color/darker_gray" />
-
-                    <TextView
-                        android:id="@+id/rating"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/brown" />
-                </LinearLayout>
-            </LinearLayout>
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
+        tools:listitem="@layout/item_card_view_trending" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
