--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -97,12 +97,12 @@
 
             <Switch
                 android:id="@+id/switch_theme"
-                android:layout_width="wrap_content"
+                android:layout_width="60dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="240dp"
+                android:layout_marginStart="210dp"
                 android:layout_marginTop="6dp"
                 android:layout_toEndOf="@+id/darkmodeIcon"
-                android:padding="10dp"
+                android:paddingStart="20dp"
                 app:tint="@color/quite_brown"
                 android:scaleX="1.5"
                 android:scaleY="1.5" />
