delete back button in blog, toast for comming soon features, UI for App Infor, Nearme button for trending

--- a/app/src/main/res/layout/activity_blog_post.xml
+++ b/app/src/main/res/layout/activity_blog_post.xml
@@ -15,11 +15,11 @@
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="0dp">
 
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="onClickReturn"
-            android:src="@drawable/keyboard_return_24px" />
+<!--        <ImageButton-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:onClick="onClickReturn"-->
+<!--            android:src="@drawable/keyboard_return_24px" />-->
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
