--- a/app/src/main/res/layout/activity_app_infor.xml
+++ b/app/src/main/res/layout/activity_app_infor.xml
@@ -44,6 +44,7 @@
             android:text="@string/intro"
             android:textColor="@color/brown"
             android:textStyle="bold"
+            android:textSize="20dp"
             />
 
 
