--- a/app/src/main/res/layout/display_blog.xml
+++ b/app/src/main/res/layout/display_blog.xml
@@ -8,14 +8,14 @@
     android:orientation="vertical"
     tools:context=".ReadBlogActivity"
     >
-    <ImageButton
-        android:id="@+id/return_from_read_blog"
-        android:onClick="onClickReturnFromBlogRead"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:src="@drawable/keyboard_return_24px"
-        android:contentDescription="back"/>
+<!--    <ImageButton-->
+<!--        android:id="@+id/return_from_read_blog"-->
+<!--        android:onClick="onClickReturnFromBlogRead"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="50dp"-->
+<!--        android:src="@drawable/keyboard_return_24px"-->
+<!--        android:contentDescription="back"/>-->
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
