--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -24,8 +24,11 @@
         app:srcCompat="@drawable/logo_text" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:id="@+id/title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/imageView"
+        >
 
         <View
             android:layout_width="300dp"
@@ -64,6 +67,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
+        android:id="@+id/setting"
         android:background="@drawable/rounded_background"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -71,7 +75,9 @@
         android:layout_marginEnd="20dp"
         android:layout_marginTop="40dp"
         android:orientation="vertical"
-        android:padding="5dp">
+        android:padding="5dp"
+        app:layout_constraintTop_toBottomOf="@+id/title"
+        >
 
         <!--DarkMode-->
         <RelativeLayout
@@ -195,7 +201,9 @@
         android:layout_marginEnd="20dp"
         android:layout_marginTop="20dp"
         android:orientation="vertical"
-        android:padding="5dp">
+        android:padding="5dp"
+        app:layout_constraintTop_toBottomOf="@+id/setting"
+        >
 
         <!--Contact-->
         <RelativeLayout
@@ -319,6 +327,7 @@
         android:layout_gravity="bottom"
         android:background="#ffebc9"
         app:menu="@menu/bottom_nav_menu"
-        android:layout_marginTop="195dp"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
